# ARCOPE

./: .gitignore  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: docs-pages.yml  tests.yml
docs/: architecture.md  full-run-example.md  index.md  installation.md  limits-and-roadmap.md  quickstart.md  showcase-experiment.md
docs/api/: bridge.md  optim.md  pipeline.md  weather.md
docs/assets/full-run/: acquisition_table.csv  artifact_manifest.json  environment.json  explorer.html  explorer_payload.json  run_config.json  variable_inventory.csv  workflow_metrics.csv
docs/assets/showcase/: dashboard.html  summary.json  timeseries.csv
examples/: 01_bridge_conversion.py  02_reflectance_simulation.py  03_full_pipeline.py  04_optimization_demo.py  05_showcase_experiment.py  06_dual_workflow_full_run.py
src/arc_scope/: __init__.py  _version.py
src/arc_scope/bridge/: __init__.py  convert.py  parameter_map.py  soil.py
src/arc_scope/data/: __init__.py  showcase_weather.csv  test_field.geojson
src/arc_scope/experiments/: __init__.py  dual_workflow.py  showcase.py
src/arc_scope/optim/: __init__.py  objective.py  parameters.py  protocols.py
src/arc_scope/pipeline/: __init__.py  config.py  runner.py  steps.py
src/arc_scope/utils/: __init__.py  geometry.py  io.py  types.py
src/arc_scope/weather/: __init__.py  base.py  cache.py  era5.py  local.py  radiation.py
tests/: conftest.py
tests/test_bridge/: test_convert.py  test_parameter_map.py  test_soil.py
tests/test_experiments/: test_dual_workflow.py  test_showcase.py
tests/test_optim/: test_objective.py  test_parameters.py
tests/test_pipeline/: test_config.py  test_runner.py  test_steps.py
tests/test_utils/: test_geometry.py  test_io.py
tests/test_weather/: test_base.py  test_cache.py  test_era5.py  test_local.py  test_radiation.py
